test/invalid/baseline/legacyiterable.txt
Syntax error at line 2 in legacyiterable.webidl, since `interface LegacyIterable`:
  legacyiterable<long>;
                ^ Unsupported generic type legacyiterable
